# dev-sosweet

./: .gitignore
backend/: db_interface.py  main.py  pyproject.toml
frontend/: .eslintrc.js  index.html  manifest.json  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
frontend/__fixtures__/: handlers.ts  initMocks.ts
frontend/public/: mockServiceWorker.js
frontend/src/: Helmet.jsx  Root.jsx  api.jsx  globals.css  main.jsx  mockApi.tsx  router.jsx
frontend/src/components/: Footer.jsx  Header.jsx  NumberPad.jsx  PasswordInput.jsx
frontend/src/components/AlbumLIst/: Container.jsx  Container.tsx
frontend/src/components/Allergy/: index.jsx
frontend/src/components/Buttons/: ExitDog.jsx  index.js
frontend/src/components/CustomIcons/: Add.jsx  ArrowBackward.jsx  ArrowForward.jsx  (+3 more)
frontend/src/mocks/: product.ts  sale.ts
frontend/src/modals/: AddPay.jsx  ChangeCheckInTime.jsx  Checkin.jsx  Checkout.jsx  DogInfo.jsx  MakeMessage.jsx  ModifyDog.jsx  ModifyHistory.jsx  ModifyPay.jsx  ModifyProduct.tsx  NewDog.jsx  NewProduct.tsx  NoticeDemo.jsx  Polaroid.jsx  SelectDog.jsx  consts.ts
frontend/src/providers/: GoogleOAuthProvider.tsx  data-provider.jsx  ui-provider.jsx
frontend/src/routes/: AdminAuthentication.jsx  AlbumList.jsx  Authentication.jsx  DogsList.jsx  GetMessage.jsx  History.jsx  Home.jsx  Hotelling.jsx  NotFound.jsx  PayHistory.jsx  PayRequired.jsx  Product.tsx  Timetable.jsx  index.js
frontend/src/store/: authentication.js  google.ts  product.ts  store.js
frontend/src/types/: dto.ts  index.ts  product.ts  sale.ts
(+40 files in other folders)
