[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yoonkeee <yoonkeee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
pymysql = "^1.1.0"
schedule = "^1.2.1"
APScheduler = "^3.10.4"
requests = "^2.31.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
